--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
+ <head>
+    <title>Black White WHite Black</title>
+    <link rel="stylesheet" href="style.css" />
+  </head> 
+  
+  
+  
+  
 <body>
   <h1> Black and white</h1>
-<img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fball?v=1605463156806" />
-<img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fballon?v=1605463165084" />
-<img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fface?v=1605463170634" />
-<img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fheart?v=1605463176014" />
-<img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fscribble?v=1605463181521" />
-<img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fstars?v=1605463186806"/>
+<div class="gallery">
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fball?v=1605463156806" />
+  </div>
+  <div class="gallery">
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fballon?v=1605463165084" />
+  </div>
+  <div class="gallery">
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fface?v=1605463170634" />
+  </div>
+  <div class="gallery">
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fheart?v=1605463176014" />
+  </div>
+  <div class="gallery">
+  <img src="" />
+  </div>
+  <div class="gallery">
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fscribble?v=1605463181521" />
+  </div>
+  <div class="gallery">
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fstars?v=1605463186806" />
+  </div>
 </body>
 </html>
-
