☺️🔖 Checkpoint ./style.css:24931136/385 ./index.html:24931136/407

--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
 <body>
   <h1> Black and white</h1>
 <div class="gallery">
-  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fball?v=1605463156806" />
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fball?v=1605463156806" width="300" height="300"/>
   </div>
   <div class="gallery">
-  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fballon?v=1605463165084" />
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fballon?v=1605463165084" width="300" height="300"/>
   </div>
   <div class="gallery">
-  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fface?v=1605463170634" />
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fface?v=1605463170634" width="300" height="300"/>
   </div>
   <div class="gallery">
-  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fheart?v=1605463176014" />
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fheart?v=1605463176014" width="300" height="300"/>
   </div>
   <div class="gallery">
   <img src="" />
   </div>
   <div class="gallery">
-  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fscribble?v=1605463181521" />
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fscribble?v=1605463181521" width="300" height="300" />
   </div>
   <div class="gallery">
-  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fstars?v=1605463186806" />
+  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fstars?v=1605463186806" width="300" height="300"/>
   </div>
 </body>
+  <footer>This website was created by Ay</footer>
 </html>
