👟⛸ Checkpoint ./index.html:24931136/16

--- a/index.html
+++ b/index.html
@@ -32,5 +32,5 @@
   <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fstars?v=1605463186806" width="300" height="300"/>
   </div>
 </body>
-  <footer>This website was created by Ay</footer>
+  <footer>This website was created by Ayishia Adetayo</footer>
 </html>
