--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <title>Black White WHite Black</title>
+    <title>Doodles are Doodles right</title>
     <link rel="stylesheet" href="style.css" />
   </head> 
   
@@ -9,7 +9,7 @@
   
   
 <body>
-  <h1>Black and White </h1>
+  <h1>Doodles are Doodles</h1>
 <div class="container">
   <img class="fit-left" src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fball?v=1605463156806" >
   <img class="fit-right" src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fballon?v=1605463165084" >
@@ -21,5 +21,5 @@
   
 </div>
 
-<footer>This website was created by Ayishia Adetayo</footer>
+<footer>This website and images was created by Ayishia Adetayo</footer>
 </html>
