--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html>
- <head>
+  <head>
     <title>Doodles are Doodles right</title>
     <link rel="stylesheet" href="style.css" />
-  </head> 
-  
-  
-  
-  
-<body>
-  <h1>Doodles are Doodles</h1>
-<div class="container">
-  <img class="fit-left" src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fball?v=1605463156806" >
-  <img class="fit-right" src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fballon?v=1605463165084" >
- 
-  <img class="fit-right" src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fface?v=1605463170634" >
-  <img class="" src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fheart?v=1605463176014" >
-  <img class="" src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fscribble?v=1605463181521" >
-  <img src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fstars?v=1605463186806" >
-  
-</div>
+  </head>
+  <body>
+    <h1>Doodles are Doodles</h1>
+    <div class="container">
+      <img
+        class="fit-left"
+        src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fball?v=1605463156806"
+      />
+      <img
+        class="fit-right"
+        src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fballon?v=1605463165084"
+      />
 
-<footer>This website and images was created by Ayishia Adetayo</footer>
+      <img
+        class="fit-right"
+        src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fface?v=1605463170634"
+      />
+      <img
+        class=""
+        src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fheart?v=1605463176014"
+      />
+      <img
+        class=""
+        src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fscribble?v=1605463181521"
+      />
+      <img
+        src="https://cdn.glitch.com/bf11e3e8-0e4d-4382-8ac0-f1e4a07f7ff0%2Fstars?v=1605463186806"
+      />
+    </div>
+  </body>
+
+  <footer>This website and images was created by Ayishia Adetayo</footer>
 </html>
