--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="#"> Doodle</a>
+        </li>
+        <li><a href="#"> More about doodles</a>
+        </li>
+      </ul>
+    </nav>
     <h1>Doodles are Doodles</h1>
     <div class="container">
       <img
