--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#"> Doodle</a>
-        </li>
-        <li><a href="#"> More about doodles</a>
-        </li>
+        <li><a href="#"> Doodle</a></li>
+        <li><a href="#"> More about doodles</a></li>
       </ul>
     </nav>
     <h1>Doodles are Doodles</h1>
