--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <nav>
       <ul>
         <li><a href="#"> Doodle</a></li>
-        <li><a href="#"> More about doodles</a></li>
+        <li><a href= > More about doodles</a></li>
       </ul>
     </nav>
     <h1>Doodles are Doodles</h1>
