🎒🚇 Checkpoint ./subpages/doodle 2:24931136/1999 ./index.html:24931136/119 ./subpages/css2:24931136/463 ./style.css:24931136/15

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <nav>
       <ul>
         <li><a href="#"> Doodle</a></li>
-        <li><a href= "https://glitch.com/~ayishia-doodle2"> More about doodles</a></li>
+        <li><a href= "https://ayishia-doodle2.glitch.me/"> More about doodles</a></li>
       </ul>
     </nav>
     <h1>Doodles are Doodles</h1>
